--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-bgmust",
-  "description": "image in css must",
-  "version": "0.1.1",
+  "description": "image in css cache control",
+  "version": "0.1.4",
   "homepage": "https://github.com/derrickliu/grunt-bgmust",
   "author": "derrickliu <liulinpeng@gmail.com> (https://github.com/derrickliu)",
   "repository": {
@@ -24,17 +24,17 @@
     "test": "grunt test"
   },
   "devDependencies": {
+    "grunt": "~0.4.5"
+  },
+  "peerDependencies": {
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-rev": "~0.1.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt": "~0.4.5"
   },
-  "peerDependencies": {
-    "grunt": "~0.4.5"
-  },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin cache background bust"
   ],
   "main": "Gruntfile.js",
   "directories": {
